--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
             <div class="number"><span class="first">01</span><p></p><span class="second">07</span></div>
             <div class="srcoll"><p>Scroll</p></div>
         </div>
+        <div class="main-text"><h1>Aesthetics <br>
+        of milimalism</h1>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         
+        The architect desinged the interior with <br> the work of famous minimalsit vincent van daysen, <br>John pawson and tadao ando</p></div>
+
+        <div class="name-area">
+            <div class="name"><p>Desinger: <br>Adrito Rafsan</p></div>
+            <div class="area"><p>area: <br>120 METER</p></div>
+        </div>
+        <div class="img"><img src="" alt=""></div>
     </div>
+
 </body>
 </html>
